syntax = "proto3";

package coffee_shop;

option go_package = "github.com/isurucuma/go_grpc_learn/protos/gen";

service CoffeeShop {
  rpc GetMenu(GetMenuRequest) returns (stream Menu) {}
  rpc PlaceOrder(OrderRequest) returns (Receipt) {}
  rpc GetOrderStatus(Receipt) returns (OrderStatus) {}
}

message GetMenuRequest {}

message Menu {
  repeated Item items = 1;
}

message Item {
  string name = 1;
  string id = 2;
  string description = 3;
  float price = 4;
}

message OrderRequest {
  repeated Item items = 1;
}

message Receipt {
  string id = 1;
}

message OrderStatus {
  string order_id = 1;
  string status = 2;
}